--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1620,7 +1620,7 @@ a {
     background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#eeeeee));
     background-image: -moz-linear-gradient(top, #f5f5f5, #eeeeee); }
     .social-bar-buttons a:hover, .social-bar-buttons a.active {
-      background: #daeea6; }
+      background: #ebebeb; }
     .social-bar-buttons a:first-child {
       border-left: 1px solid #cccccc;
       padding-left: 34px; }
