--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1747,7 +1747,16 @@ a {
   width: 100%;
   border-top: 4px solid #4d4d4d;
   margin: 0 auto; }
-/*7c9f1f*/
+
+.when {
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #4d4d4d;
+    width: 150px;
+    display: block;
+    text-align: right;
+    margin: 23px 0 0 -210px;
+    float: left; }
 
 .highlight {
   padding: 10px 20px;
