--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1766,3 +1766,21 @@ a {
 
 ul li, ol li {
   margin-bottom: 10px; }
+
+code {
+  margin:0 2px;
+  padding:0px 5px;
+  border:1px solid #ddd;
+  font-size:13px;
+  background-color:#f8f8f8;
+  border-radius:3px; }
+
+pre code {
+  background-color:#f8f8f8;
+  border:1px solid #ddd;
+  font-size:13px;
+  line-height:19px;
+  overflow:auto;
+  padding:6px 10px;
+  border-radius:3px;
+  display: block; }
